--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.sf.jasperreports</groupId>
 	<artifactId>jasperreports-scala</artifactId>
-	<version>4.6.0</version>
+	<version>5.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>JasperReports-Scala</name>
 	<url>http://jasperreports.sourceforge.net</url>
@@ -38,7 +38,7 @@
 	<repositories>
 		<repository>
 			<id>jasperreports</id>
-			<url>http://jasperreports.sourceforge.net/maven2</url>
+			<url>http://code.jaspersoft.com/svn/repos/jasperreports/</url>
 		</repository>
 	</repositories>
 	<build>
@@ -75,7 +75,7 @@
 						<phase>compile</phase>
 						<configuration>  
 							<target name="unjar-jr">
-								<unjar src="${basedir}/lib/jasperreports-4.6.0.jar"
+								<unjar src="${basedir}/lib/jasperreports-5.0.2-SNAPSHOT.jar"
 									dest="${basedir}/target/classes"
 									overwrite="false">
 									<patternset>
@@ -430,17 +430,23 @@
         <dependency>
         	<groupId>org.scala-lang</groupId>
         	<artifactId>scala-compiler</artifactId>
-        	<version>2.9.1</version>
+        	<version>2.9.3</version>
         </dependency>
         <dependency>
         	<groupId>org.scala-lang</groupId>
         	<artifactId>scala-library</artifactId>
-        	<version>2.9.1</version>
+        	<version>2.9.3</version>
         </dependency>
         <dependency>
         	<groupId>net.sf.jasperreports</groupId>
         	<artifactId>jasperreports</artifactId>
-        	<version>4.6.0</version>
+        	<version>5.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-core</artifactId>
+        	<version>1.9.5</version>
+        	<scope>test</scope>
         </dependency>
 	</dependencies>
 </project>
