--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.sf.jasperreports</groupId>
 	<artifactId>jasperreports-scala</artifactId>
-	<version>5.6.1-SNAPSHOT</version>
+	<version>6.2.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>JasperReports-Scala</name>
-	<url>http://jasperreports.sourceforge.net</url>
+	<url>http://jasperreports-scala.sourceforge.net</url>
 	<description>JasperReports Library</description>
 	<licenses>
 		<license>
@@ -20,13 +20,16 @@
 		<tag>jr-scala</tag>
 		<url>https://sourceforge.net/p/jr-scala/code/ci/64413965ba5eb4a3209f7d4395d0057ff6c7fc28/tree/</url>
 	</scm>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<developers>
 		<developer>
 			<id>slwkf1</id>
 			<name>Steve Park</name>
-			<email>slwkf1@users.sourceforge.net</email>
+			<email>slwkf1@yahoo.com</email>
 			<url>http://sourceforge.net/users/slwkf1</url>
-			<organization>Jaspersoft Corporation</organization>
+			<organization>TIBCO Software Inc.</organization>
 			<organizationUrl>http://www.jaspersoft.com</organizationUrl>
 			<roles>
 				<role>architect</role>
@@ -38,11 +41,16 @@
 	<repositories>
 		<repository>
 			<id>jasperreports</id>
-			<url>http://code.jaspersoft.com/svn/repos/jasperreports/</url>
+			<url>http://jasperreports.sourceforge.net/maven2</url>
+		</repository>
+		<repository>
+			<id>jaspersoft-third-party</id>
+			<url>http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts/</url>
 		</repository>
 	</repositories>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>tests</testSourceDirectory>
 		<resources>
 			<resource>
 				<directory>src</directory>
@@ -60,54 +68,131 @@
 					<include>**/*.vm</include>
 					<include>**/*.js</include>
 					<include>**/*.css</include>
+					<include>**/*.ttf</include>
+					<include>**/*.otf</include>
+					<include>**/*.woff</include>
+					<include>**/*.eot</include>
+					<include>**/*.svg</include>
+					<include>**/*.svgz</include>
+					<include>**/*.tmpl</include>
 				</includes>
 			</resource>
 		</resources>
+		<testResources>
+			<testResource>
+				<directory>tests</directory>
+				<includes>
+					<include>**/*.jrxml</include>
+					<include>**/*.jrpxml</include>
+					<include>**/*.xml</include>
+					<include>**/*.csv</include>
+					<include>**/*.png</include>
+					<include>**/*.jpg</include>
+				</includes>
+			</testResource>
+		</testResources>
 		<plugins>
-			<!-- Use Ant to unpackage the JasperReports library -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.7</version>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>2.10</version>
 				<executions>
 					<execution>
-                        <id>unpackage-jr</id>
-						<phase>compile</phase>
-						<configuration>  
-							<target name="unjar-jr">
-								<unjar src="${basedir}/lib/jasperreports-5.6.1-SNAPSHOT.jar"
-									dest="${basedir}/target/classes"
-									overwrite="false">
-									<patternset>
-										<include name="**/*.class"/>
-										<exclude name="**/JRReport.class"/>
-									</patternset>
-								</unjar>
-							</target>
-						</configuration>
+						<id>unpack-jr</id>
+						<phase>package</phase>
 						<goals>
-							<goal>run</goal>
+							<goal>unpack</goal>
 						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>net.sf.jasperreports</groupId>
+									<artifactId>jasperreports</artifactId>
+									<version>6.2.2-SNAPSHOT</version>
+									<type>jar</type>
+									<overWrite>false</overWrite>
+									<outputDirectory>${basedir}/target/classes</outputDirectory>
+									<excludes>**/JRReport.class</excludes>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>copy_additional_resources</id>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<phase>process-resources</phase>
+						<configuration>
+							<outputDirectory>${basedir}/target/classes</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}</directory>
+									<includes>
+										<include>license.txt</include>
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.2</version>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<archive>
+								<manifestFile>${basedir}/src/META-INF/MANIFEST.MF</manifestFile>
+							</archive>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<archive>
-						<manifestFile>${basedir}/src/META-INF/MANIFEST.MF</manifestFile>
-					</archive>
+					<systemPropertyVariables>
+						<xmlOutputDir>${project.build.directory}/surefire</xmlOutputDir>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<quiet>true</quiet>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>clirr-maven-plugin</artifactId>
+				<configuration>
+					<comparisonVersion>6.2.1</comparisonVersion>
+					<ignoredDifferencesFile>${basedir}/clirr-ignore.xml</ignoredDifferencesFile>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -116,20 +201,20 @@
 		<repository>
 			<id>sonatype-nexus-staging</id>
 			<name>Nexus Release Repository</name>
-			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>1.8.0</version>
+			<version>1.9.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
-			<version>2.1</version>
+			<version>3.2.2</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -146,8 +231,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate</artifactId>
-			<version>3.0.5</version>
+			<artifactId>hibernate-core</artifactId>
+			<version>3.3.2.GA</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
@@ -160,13 +245,12 @@
 		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
-			<version>2.1.7</version>
-			<scope>compile</scope>
+			<version>2.1.7.js5</version>
 		</dependency>
 		<dependency>
-			<groupId>jfree</groupId>
+			<groupId>org.jfree</groupId>
 			<artifactId>jcommon</artifactId>
-			<version>1.0.15</version>
+			<version>1.0.23</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
@@ -176,9 +260,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>jfree</groupId>
+			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
-			<version>1.0.12</version>
+			<version>1.0.19</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
@@ -190,7 +274,7 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.7</version>
+			<version>3.10.1</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -204,7 +288,7 @@
 		<dependency>
 			<groupId>xalan</groupId>
 			<artifactId>xalan</artifactId>
-			<version>2.7.1</version>
+			<version>2.7.2</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -223,15 +307,7 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>1.7.5</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>rhino</groupId>
-			<artifactId>js</artifactId>
-			<version>1.7R1</version>
-			<scope>compile</scope>
+			<version>2.4.5</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
@@ -245,13 +321,6 @@
 			<groupId>net.sourceforge.jexcelapi</groupId>
 			<artifactId>jxl</artifactId>
 			<version>2.6.10</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.keypoint</groupId>
-			<artifactId>png-encoder</artifactId>
-			<version>1.5</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -273,19 +342,21 @@
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
 			<version>1.0</version>
+			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>antlr</groupId>
 			<artifactId>antlr</artifactId>
 			<version>2.7.5</version>
+			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.soap</groupId>
 			<artifactId>saaj-api</artifactId>
 			<version>1.3</version>
-			<scope>compile</scope>
+			<scope>runtime</scope>
 			<optional>true</optional>
 			<exclusions>
 				<exclusion>
@@ -311,63 +382,14 @@
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-bridge</artifactId>
-			<version>1.7</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-gvt</artifactId>
-			<version>1.7</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-util</artifactId>
-			<version>1.7</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-svg-dom</artifactId>
-			<version>1.7</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-dom</artifactId>
-			<version>1.7</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-script</artifactId>
-			<version>1.7</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-css</artifactId>
-			<version>1.7</version>
+			<version>1.8</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-svggen</artifactId>
-			<version>1.7</version>
-			<scope>compile</scope>
-			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>batik-awt-util</artifactId>
-			<version>1.7</version>
+			<version>1.8</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -388,7 +410,7 @@
 		<dependency>
 			<groupId>net.sf.barcode4j</groupId>
 			<artifactId>barcode4j</artifactId>
-			<version>2.0</version>
+			<version>2.1</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
@@ -401,8 +423,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.castor</groupId>
-			<artifactId>castor</artifactId>
-			<version>1.2</version>
+			<artifactId>castor-xml</artifactId>
+			<version>1.3.3</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -415,38 +437,125 @@
 		<dependency>
 		    <groupId>org.apache.poi</groupId>
 		    <artifactId>poi-ooxml</artifactId>
-		    <version>3.7</version>
+		    <version>3.10.1</version>
+			<scope>compile</scope>
+			<optional>true</optional>
 		</dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.4</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.1.4</version>
+			<scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.4</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.1.4</version>
+			<scope>compile</scope>
         </dependency>
         <dependency>
-        	<groupId>org.scala-lang</groupId>
-        	<artifactId>scala-compiler</artifactId>
-        	<version>2.9.3</version>
+        		<groupId>org.scala-lang</groupId>
+        		<artifactId>scala-compiler</artifactId>
+        		<version>2.11.8</version>
+        	</dependency>
+        <dependency>
+        		<groupId>org.scala-lang</groupId>
+        		<artifactId>scala-library</artifactId>
+        		<version>2.11.8</version>
         </dependency>
         <dependency>
-        	<groupId>org.scala-lang</groupId>
-        	<artifactId>scala-library</artifactId>
-        	<version>2.9.3</version>
+        		<groupId>org.scala-lang</groupId>
+        		<artifactId>scala-reflect</artifactId>
+        		<version>2.11.8</version>
         </dependency>
         <dependency>
-        	<groupId>net.sf.jasperreports</groupId>
-        	<artifactId>jasperreports</artifactId>
-        	<version>5.6.1-SNAPSHOT</version>
+        		<groupId>net.sf.jasperreports</groupId>
+        		<artifactId>jasperreports</artifactId>
+        		<version>6.2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
-        	<groupId>org.mockito</groupId>
-        	<artifactId>mockito-core</artifactId>
-        	<version>1.9.5</version>
-        	<scope>test</scope>
+	        	<groupId>org.mockito</groupId>
+	        	<artifactId>mockito-core</artifactId>
+	        	<version>1.9.5</version>
+        		<scope>test</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>com.adobe.xmp</groupId>
+	        	<artifactId>xmpcore</artifactId>
+	        	<version>5.1.1</version>
+        </dependency>
+        <dependency>
+	        	<groupId>org.eclipse.jdt.core.compiler</groupId>
+	        	<artifactId>ecj</artifactId>
+	        	<version>4.3.1</version>
+        </dependency>
+        <dependency>
+	        	<groupId>org.mozilla</groupId>
+	        	<artifactId>rhino</artifactId>
+	        	<version>1.7.6</version>
+        </dependency>
+        <dependency>
+	        	<groupId>com.fasterxml.jackson.core</groupId>
+	        	<artifactId>jackson-databind</artifactId>
+	        	<version>2.1.4</version>
+        </dependency>
+        <dependency>
+	        	<groupId>log4j</groupId>
+	        	<artifactId>log4j</artifactId>
+	        	<version>1.2.17</version>
+	        	<scope>test</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>net.sf.jasperreports</groupId>
+	        	<artifactId>jasperreports-fonts</artifactId>
+	        	<version>4.0.0</version>
+	        	<scope>test</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>org.apache.lucene</groupId>
+	        	<artifactId>lucene-core</artifactId>
+	        	<version>4.5.1</version>
+			<scope>compile</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>org.apache.lucene</groupId>
+	        	<artifactId>lucene-analyzers-common</artifactId>
+	        	<version>4.5.1</version>
+			<scope>compile</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>org.apache.lucene</groupId>
+	        	<artifactId>lucene-queryparser</artifactId>
+	        	<version>4.5.1</version>
+			<scope>compile</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>org.olap4j</groupId>
+	        	<artifactId>olap4j</artifactId>
+	        	<version>0.9.7.309-JS-3</version>
+			<scope>compile</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>org.apache.httpcomponents</groupId>
+	        	<artifactId>httpclient</artifactId>
+	        	<version>4.3.4</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+        </dependency>
+        <dependency>
+	        	<groupId>com.google.zxing</groupId>
+	        	<artifactId>core</artifactId>
+	        	<version>2.3.0</version>
+			<scope>compile</scope>
+        </dependency>
+        <dependency>
+	        	<groupId>com.ibm.icu</groupId>
+	        	<artifactId>icu4j</artifactId>
+	        	<version>57.1</version>
         </dependency>
 	</dependencies>
+	<organization>
+		<name>Steve Park</name>
+		<url>http://www.tibco.com</url>
+	</organization>
 </project>
